@@ -16,6 +16,9 @@ Changes in 3.0.1
 * FIX: handling of '/' and ':' in volume name
 * UPD: Install relevant includes necessary for building programs with
        installed headers and shared lib libatalk
+* UPD: libevent configure args to pick up installed version. Removed
+       configure arg --disable-libevent, added configure args
+       --with-libevent-header|lib.
 * REM: Remove --with-smbsharemodes configure option, it was an
        empty stub not yet implemented
 
